# crypt

./: .gitignore  CMakeLists.txt  CryptEditor.cpp  CryptEditor.h  CryptPlugin.cpp  PluginProcessor.cpp  PluginProcessor.h  README.md  SuperSaw.cpp  SuperSaw.h
.github/workflows/: build.yml  cmake.yml
resources/: LICENSE.md  presets.xml
src/: CryptAudioProcessor.hpp  CryptAudioProcessorEditor.hpp  CryptParameters.hpp  CryptPlugin.cpp  CustomParameterModel.hpp  FxProcessors.hpp  ParameterControlledADSR.hpp  SharedBuffer.hpp  SuperSawVoice.hpp
